# Xopt

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  Untitled1.ipynb  all_sequential_tests.txt  codecov.yml  docs-requirements.txt  environment.yml  executor_examples.py  matinit.m  mkdocs.yml  pyproject.toml  requirements.txt  run_examples.py  run_tests.py  setup.cfg  setup.py  test-requirements.txt  test.ipynb  test.py  test_checkpointing.yaml  test_integration.py  test_results.txt  test_serialization_results.txt  testeval.m  xopt_mat.yaml
.github/workflows/: benchmark.yml  ci.yml  examples.yml  formatting.yml  gh-pages.yml  lint.yml  pypi_upload.yml  test-notebooks.yml  tests.yml  tests_uv.yml
benchmarks/: hypervolume.ipynb  test_mo.py  test_models.py  test_neldermead.py  test_ucb.py
developer/: evaluator_devel.ipynb  executors.ipynb
docs/: algorithms.md  index.md  installation.md  stopping_conditions.md
docs/api/: bayesian.md  evaluator.md  generators.md  numerical_optimizer.md  stopping_conditions.md  utils.md  vocs.md  xopt.md
docs/examples/: bayesian_exploration.ipynb  xopt_basic.ipynb  xopt_parallel.ipynb
docs/hooks/: zip_generator.py
docs/overrides/: main.html
docs/stylesheets/: extra.css
drivers/: xopt_gpt.py  xopt_mpi.py  xopt_sampler.py
examples/basic/: executors.ipynb  vocs.ipynb  xopt_basic.ipynb  xopt_evaluator.ipynb  xopt_executor.ipynb  xopt_generator.ipynb  xopt_parallel.ipynb  xopt_tnk_example.ipynb
examples/bayes_exp/: batched.ipynb  bayesian_exp.ipynb  bayesian_exploration.ipynb  bayesian_exploration_from_yaml.ipynb  bayesian_exploration_restart.ipynb  bayesian_exploration_scripting.ipynb  benchmarking.ipynb  dump.yaml  opt_data.json  opt_data.pkl  results.json  serial.ipynb  serial_custom_model.ipynb  serial_nans.ipynb  serial_proximal.ipynb  xopt_class_tnk.ipynb  xopt_class_tnk_exp.ipynb
examples/bayes_opt/: bayesian_optimization.ipynb  custom_acq.py  xopt_class_bayes_opt.ipynb
examples/cbeta.dcgun/: cbeta.dcgun.vocs.json  xoptin.py
examples/cbeta_measurement/: xopt_gpt.in
examples/cnsga/: cnsga2_tnk.ipynb  cnsga_tnk.ipynb  cnsga_tnk.py
examples/devel/: TNK_test.json  cnsga.py  mnsga_devel.ipynb  nsga2_constrained.ipynb  run.bash  (+2 more)
overrides/: main.html
scripts/: execute_notebooks.bash  run_benchmarks.py  run_examples.py  run_notebooks.sh  run_tests.py
tests/: _model.pt  covar_modules_y1.pt  dump.yml  test_evaluator.py  test_generator.py  test_input.py  test_io.py  test_mpi.py  test_numerical_optimizer.py  test_perf.py  test_pydantic.py  test_utils.py  test_vocs.py  test_xopt.py
xopt/: __init__.py  _version.py  asynch.py  asynchronous.py  base.py  bayesian_exploration.py  cmoo.py  cnsga.py  config.py  configure.py  dataset.py  entrypoint.py  errors.py  evaluator.py  fitness_with_constraints.py  generator.py  input.py  io.py  legacy.py  log.py  mobo.py  nsga2.py  nsga2_tools.py  numerical_optimizer.py  options.py  pydantic.py  run.py  run_mpi.py  sampler.py  stopping_conditions.py  tools.py  utils.py  vocs.py  vocs_tools.py  xopt.py
(+476 files in other folders)
