[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=60",
  "setuptools_scm[toml]>=8.0"
]

[project]
authors = [
  {name="Christopher Mayes"},
  {name="Ryan Roussel"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "deap",
  "numpy",
  "pydantic>=2.3",
  "pyyaml",
  "botorch>=0.9.2,<=0.10.0",
  "scipy>=1.10.1",
  "pandas",
  "ipywidgets",
  "tqdm",
  "orjson",
  "matplotlib"
]
description = "Flexible optimization of arbitrary problems in Python."
dynamic = [ "version" ]
keywords = []
name = "xopt"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ffmpeg",
  "pytest",
  "pytest-cov",
  "jupyterlab>=3",
  "jupyterlab-lsp",
  "python-lsp-server",
  "pygments",
  "dask",
  "mpi4py"
]
doc = [
  "mkdocs",
  "mkdocs-jupyter",
  "mkdocs-macros-plugin",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/xopt-org/xopt"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = ["."]
include = [ "xopt", ]
namespaces = false

[project.license]
file = "LICENSE"

[tool.ruff]
# select = []
# ignore = []

[tool.pytest.ini_options]
addopts = "--cov=xopt/"
log_cli_level = "info"
log_level = "debug"
testpaths = ["xopt/tests"]

[tool.setuptools_scm]
version_file = "xopt/_version.py"
